<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tu Mejor Opcion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="comprar_bono">Comprar Bono</string>
    <string name="friend_mail_text">Correo</string>
    <string name="store_name_text">Tienda nombre</string>
    <string name="friend_name_text">Amigo nombre</string>
    <string name="value_bono_text">Valor</string>
    <string name="buy_bono_button_text">Comprar</string>


</resources>
